[package]
name = "mclient"
version = "0.1.0"
edition = "2024"

[dependencies]
memif = { path = "../memif" }
anyhow = "^1.0.42"
uds = "*"
binary_serde = { version = "*", features = ["std"] }
memfd = "*"
nix = { version = "*", features = ["fs", "mman", "uio", "socket", "event"] }
vcell = "*"
oside = { git = "https://github.com/ayourtch/oside.git" }

